Support for output added to python interface, FITSOutput

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,6 +219,7 @@ if(ENABLE_PYTHON AND PYTHONLIBS_FOUND)
 	pybind11_add_module(pyhermes
 		python/Units.cpp
 		python/Vectors.cpp
+		python/Outputs.cpp
 		python/Skymaps.cpp
 		python/Integrators.cpp
 		python/MagneticFields.cpp
