Added TERM/KILL signal so that computation can be stopped

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,6 +171,7 @@ add_library(hermes SHARED
 	src/FITSWrapper.cpp
 	src/ProgressBar.cpp
 	src/GridTools.cpp
+	src/Signals.cpp
 	src/skymaps/Skymap.cpp
 	src/skymaps/SkymapMask.cpp
 	src/skymaps/GammaSkymapRange.cpp
