--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,12 @@ matrix:
 before_install:
   - |
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      HOMEBREW_NO_AUTO_UPDATE=1 brew install swig;
+      HOMEBREW_NO_AUTO_UPDATE=1 brew install python3;
       HOMEBREW_NO_AUTO_UPDATE=1 brew install gsl;
       HOMEBREW_NO_AUTO_UPDATE=1 brew install cfitsio;
       HOMEBREW_NO_AUTO_UPDATE=1 brew install gcc || true;
       HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite gcc;
+      HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite python;
     fi;
 
 before_script:
