--- a/.travis.yml
+++ b/.travis.yml
@@ -68,10 +68,10 @@ before_script:
     fi
   - |
           if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-                CC=$GCC_BREW_PATH/bin/gcc \
-                CXX=$GCC_BREW_PATH/bin/g++ \
-                CMAKE_C_COMPILER=$GCC_BREW_PATH/bin/gcc \
-                CMAKE_CXX_COMPILER=$GCC_BREW_PATH/bin/g++ \
+                CC=$GCC_BREW_PATH/bin/gcc-9 \
+                CXX=$GCC_BREW_PATH/bin/g++-9 \
+                CMAKE_C_COMPILER=$GCC_BREW_PATH/bin/gcc-9 \
+                CMAKE_CXX_COMPILER=$GCC_BREW_PATH/bin/g++-9 \
                 cmake .. -DENABLE_PYTHON=True \
                 -DPYTHON_EXECUTABLE=$PYTHON_BREW_PATH/bin/python3 \
                 -DPYTHON_LIBRARY=$PYTHON_BREW_PATH/Frameworks/Python.framework/Versions/3.7/lib/libpython3.7.dylib \
