--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
             - python3-setuptools
             - python3-dev
             - cmake
+            - lcov
         sources: &sources
             - ubuntu-toolchain-r-test
 cache:
