--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ matrix:
 before_install:
     - |
       if [ $COVERALLS ]; then
-        pip install --user cpp-coveralls
+        pip3 install --user cpp-coveralls
       fi;
     - |
       if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
@@ -71,7 +71,7 @@ before_script:
       if [ -f $DATAFILE ]; then
         echo "Using data file from cache!"
         cp $DATAFILE .
-      fi
+      fi;
     - |
       if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
                 CC=$GCC_BREW_PATH/bin/gcc-9 \
@@ -95,4 +95,7 @@ script:
 after_failure:
     - cat Testing/Temporary/LastTest.log
 after_success:
-    - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+    - |
+      if [ $COVERALLS ]; then
+                coveralls --root . --include ../src --include ../include --exclude ".*CMakeFiles.*" --exclude ../libs --exclude ../test --gcov-options '\-lp'
+      fi;
