--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,32 @@ add_subdirectory(lib/cparamlib)
 list(APPEND HERMES_EXTRA_INCLUDES lib/cparamlib)
 list(APPEND HERMES_EXTRA_LIBRARIES cparamlib)
 
+# ----------------------------------------------------------------------------
+# Lint and Covarage 
+# ----------------------------------------------------------------------------
+
+# clang-tidy config based on
+# https://gitlab.kitware.com/cmake/cmake/issues/18926#note_518804
+option(CMake_RUN_CLANG_TIDY "Run clang-tidy with the compiler." OFF)
+if(CMake_RUN_CLANG_TIDY)
+  if(CMake_SOURCE_DIR STREQUAL CMake_BINARY_DIR)
+    message(FATAL_ERROR "CMake_RUN_CLANG_TIDY requires an out-of-source build!")
+  endif()
+  find_program(CLANG_TIDY_COMMAND NAMES clang-tidy)
+  if(NOT CLANG_TIDY_COMMAND)
+    message(WARNING "CMake_RUN_CLANG_TIDY is ON but clang-tidy is not found!")
+    set(CMAKE_CXX_CLANG_TIDY "" CACHE STRING "" FORCE)
+  else()
+    set(CLANG_TIDY_CHECKS "-*,bugprone-*")
+    set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_COMMAND};-checks=${CLANG_TIDY_CHECKS};-header-filter='${CMAKE_SOURCE_DIR}/src/*'")
+  endif()
+
+  file(SHA1 ${CMAKE_CURRENT_SOURCE_DIR}/.clang-tidy clang_tidy_sha1)
+  set(CLANG_TIDY_DEFINITIONS "CLANG_TIDY_SHA1=${clang_tidy_sha1}")
+  unset(clang_tidy_sha1)
+endif(CMake_RUN_CLANG_TIDY)
+configure_file(.clang-tidy .clang-tidy COPYONLY)
+
 OPTION(ENABLE_COVERAGE "Add code for coverage analysis." OFF)
 if(ENABLE_COVERAGE)
         find_program(LCOV_PATH lcov)
